<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_view_my_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_name_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/enter_your_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_latitude_label"
        android:layout_below="@+id/tv_latitude_label"
        android:text="@string/my_long_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_name_ET"
        android:layout_below="@+id/edit_name_ET"
        android:text="@string/my_lat_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/my_lat_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_longitude_label"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/my_long_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/push_location_button"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/push_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_longitude_label"
        android:layout_below="@+id/tv_longitude_label"
        android:text="@string/main_button_push_location" />

    <Button
        android:id="@+id/get_locations_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/push_location_button"
        android:layout_below="@+id/push_location_button"
        android:layout_marginTop="14dp"
        android:text="@string/main_button_get_location" />

    <ListView
        android:id="@+id/list_of_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/get_locations_button"
        android:layout_below="@+id/get_locations_button" >
    </ListView>

</RelativeLayout>